Fix modal title, and let blocks align next to each other

--- a/editor/components/post-featured-image/style.scss
+++ b/editor/components/post-featured-image/style.scss
@@ -7,8 +7,8 @@
 
 	// Space consecutive buttons evenly.
 	.components-button + .components-button {
-		display: block;
 		margin-top: 1em;
+		margin-right: 8px;
 	}
 
 	// Don't size up images beyond their intrinsic size.
